# shila-lager

./: .gitignore  ReadMe.md  setup.cfg  setup.py
src/shila_lager/: manage.py  settings.py  utils.py
src/shila_lager/frontend/: asgi.py  urls.py  wsgi.py
src/shila_lager/frontend/apps/bestellung/: admin.py  apps.py  crud.py  models.py  urls.py  views.py
src/shila_lager/frontend/apps/bestellung/migrations/: 0001_initial.py  0002_alter_beveragecrate_bottle_type_and_more.py
src/shila_lager/frontend/apps/bestellung/static/bestellung/: script.js
src/shila_lager/frontend/apps/bestellung/templates/bestellung/: base.html  grihed.html
src/shila_lager/frontend/apps/einzahlungen/: apps.py  urls.py  views.py
src/shila_lager/frontend/apps/rechnungen/: analyze.py  apps.py  beverage_facts.py  crud.py  grihed_pdf_analyzer.py  models.py  mv_abrechnung.py  urls.py  views.py  weekly_digest.py
src/shila_lager/frontend/apps/rechnungen/management/commands/: analyze-pdfs.py  import-bookings.py  import-inventory-counts.py  import-lager.py  import-pdfs.py  import-sale-prices.py  mv-abrechnung.py  verify-db-integrity.py  weekly-digest.py
src/shila_lager/frontend/apps/rechnungen/migrations/: 0001_initial.py  0002_remove_grihedinvoiceitem_name.py
src/shila_lager/frontend/apps/rechnungen/mv_abrechnung/: data.py  main.py  plots.py  static_data.py
src/shila_lager/frontend/apps/rechnungen/parser/: grihed_pdf_parser.py  inventory_counts_parser.py  lager_parser.py  sparkasse_csv_parser.py
src/shila_lager/frontend/apps/stats/: apps.py  urls.py  views.py
src/shila_lager/frontend/static/global/: style.css
src/shila_lager/frontend/templates/global/: base.html
src/shila_lager/resources/: state.db  test_state.db
tests/: conftest.py  test.py
