[metadata]
name = shila-lager
description = Shila Lager
author = Emily Seebeck
license = GPL3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12


[options]

python_requires = >=3.10
zip_safe = no
package_dir =
  = src

# Each directory in the src dir should be listed here. For nested directories, separate the, with a `.`
packages =
  shila_lager
  shila_lager.frontend
  shila_lager.frontend.apps.bestellung
  shila_lager.frontend.apps.einzahlungen
  shila_lager.frontend.apps.stats


# --- Packages ---

# TODO: You might want to update these dependencies
install_requires =
  django~=5.0.4
  sqlalchemy[mypy]~=2.0.20
  sqlalchemy-utils[mypy]~=0.41
  pypdf~=4.2.0
  pytz~=2024.1
  numpy~=1.26.4
  matplotlib~=3.8.4
  python-dateutil==2.9.0
  pyyaml~=6.0.1

[options.extras_require]
testing =
  pytest~=8.1.1
  pytest-cov~=5.0.0
  pytest-asyncio~=0.23.6
  mypy~=1.7.0  # TODO: Update this to the latest version once django-stubs updates
  django-stubs[compatible-mypy]~=4.2.7
  matplotlib-stubs~=0.2.0
  types-pytz~=2024.1
  types-pyyaml~=6.0.12
  types-python-dateutil~=2.9.0
  flake8~=7.0.0
  twine~=5.0.0
  build~=1.2.1
  radon~=6.0.1



# -/- Packages

[options.entry_points]
console_scripts =
  shila-lager = shila_lager.__main__:main
  shila-manage = shila_lager.manage:main

### -/-

# --- Linters ---

[flake8]
max-line-length = 500
ignore = E731 W504

[mypy]
strict = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = false

implicit_optional = false
strict_optional = true

warn_redundant_casts = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

show_error_context = true
show_column_numbers = true
pretty = true
color_output = true

plugins = mypy_django_plugin.main

[mypy.plugins.django-stubs]
django_settings_module = "shila_lager.settings"